--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,8 +15,8 @@ jobs:
     - name: Login into docker hub
       uses: docker/login-action@v3
       with:
-        username: ${{ secret:DOCKER-USERNAME }}
-        password: ${{ secret:DOCKER-PASSWORD }}
+        username: ${{ secrets:DOCKER_USERNAME }}
+        password: ${{ secrets:DOCKER_PASSWORD }}
 
     - name: Push it to dockerhub
       uses: docker/build-push-action@v6
