--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Push it to dockerhub 1
       uses: docker/build-push-action@v6
       with:
-        context:
+        context: .
         file: ./dockerfile
         push: true
         tags: suraj266/chat-server-backend
