--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build And Deploy
+name: Build and Deploy to Docker Hub
 
 on:
   push:
@@ -9,22 +9,22 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout Repo
-      uses: actions/checkout@v3
+    - name: Check Out Repo
+      uses: actions/checkout@v2
 
-    - name: Login into docker hub
-      uses: docker/login-action@v3
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v1
       with:
-        username: ${{ secrets:DOCKER_USERNAME }}
-        password: ${{ secrets:DOCKER_PASSWORD }}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Push it to dockerhub 1
-      uses: docker/build-push-action@v6
+    - name: Build and Push Docker image
+      uses: docker/build-push-action@v2
       with:
         context: .
-        file: ./dockerfile
+        file: dockerfile
         push: true
-        tags: suraj266/chat-server-backend:latest
+        tags: suraj266/chat-server-backend:latest  # Replace with your Docker Hub username and repository
 
-    - name: verify image
-      run: docker pull suraj266/chat-server-backend
+    - name: Verify Pushed Image
+      run: suraj266/chat-server-backend:latest  #
